Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50637

QTabBar with padding in stylesheet clips text if elide mode is set

XMLWordPrintable

    • 24b8b2cb6ccd3704545ef44519f567edb3da5d5d (qt/qtbase/5.15)

      Setting icon and text in tab and specifying padding in stylesheet clips the text if elide mode is set to other than Qt::ElideNone.

      To reproduce, run attached example. Note that piece of the text is missing from the beginning. (depending on the used font, you may need to adjust window size)

        1. qtbug50637.diff
          2 kB
          Andy Shaw
        2. qtbug50637.tar.gz
          2 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes