tests/manual/widgets/widgets/qtabbar/stylesheet/stylesheet.pro
@@ -1,0 +1,5 @@
+QT += widgets
+TEMPLATE = app
+TARGET = stylesheet
+RESOURCES += res.qrc
+SOURCES += main.cpp
